Delete option in OrderTable: added
